objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>Reason_Closed_Lost__c</controllingField>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoConX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoniq</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Soft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autostar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <label>Confirmed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Conquest_Contact_1_Makes__c</fullName>
        <label>Conquest Contact 1 Make(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daihatsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge/Ram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Conquest_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conquest Contact 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit_for_Contact_Filter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Conquest Contact 1)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conquest_Contact_2_Make_s__c</fullName>
        <label>Conquest Contact 2 Make(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daihatsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge/Ram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Conquest_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conquest Contact 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit_for_Contact_Filter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Conquest Contact 2)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conquest_Contact_3_Make_s__c</fullName>
        <inlineHelpText>Enter Makes to train for Conquest Contact 3</inlineHelpText>
        <label>Conquest Contact 3 Make(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daewoo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daihatsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge/Ram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lotus</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Conquest_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is your third Conquest Contact.
These Contacts are what help the PM Conquest call tasks, so it must be filled out.  
A Conquest Make cannot be associated with more than 1 Contact, but you can have multiple makes per Contact.</inlineHelpText>
        <label>Conquest Contact 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit_for_Contact_Filter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Conquest Contact 3)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conquest__c</fullName>
        <description>was Opportunity taken from competition</description>
        <inlineHelpText>Taken from competition</inlineHelpText>
        <label>Conquest</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Deal_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>set to true by the system when a contract is created from this opportunity</inlineHelpText>
        <label>Contract Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <label>Contract Term</label>
        <picklist>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month to Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Factor__c</fullName>
        <defaultValue>1</defaultValue>
        <description>*** ADMIN ONLY ***
Cost Factor figured from Packages on insert.</description>
        <label>Cost Factor</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By_Company_Name__c</fullName>
        <description>This field is created to store the Company Name of the user who created it.</description>
        <label>Created By Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_2__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>hidden field used to calculate days between things</inlineHelpText>
        <label>Created Date_2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>MONTH(Created_Date_2__c )</formula>
        <inlineHelpText>formula field to read the month the opp was created</inlineHelpText>
        <label>Created Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <inlineHelpText>formula field that displays the role of the user that created the opp - for reporting purposes</inlineHelpText>
        <label>Created by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomPricing__c</fullName>
        <label>CustomPricing</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DDM_Email__c</fullName>
        <label>DDM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>DM_Opportunity_Extra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMS_Vendor__c</fullName>
        <inlineHelpText>Who is the Dealer&apos;s Current Vendor?</inlineHelpText>
        <label>DMS Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>AAX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction 123</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoAccelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoBytel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoConX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Jockey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto/Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoMatrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoOne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Revo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autostar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autotrader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Uplink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AVV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buzz Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BZ Track</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_DM_Webexed__c</fullName>
        <inlineHelpText>date the decision maker was webexed</inlineHelpText>
        <label>Date DM Webexed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Replacement_Doc_Ret_d__c</fullName>
        <inlineHelpText>enter the date the order form was returned</inlineHelpText>
        <label>Date Order Form Ret&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Replacement_Doc_Sent__c</fullName>
        <inlineHelpText>please update this field when the order form is sent t the customer</inlineHelpText>
        <label>Date Order Form Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Approval__c</fullName>
        <inlineHelpText>updated by the approval process workflow</inlineHelpText>
        <label>Date Submitted for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_To_Close_Deal__c</fullName>
        <formula>IF( IsWon = True,   DATEVALUE(Paid_Date_decoy__c )  - Created_Date_2__c, NULL)</formula>
        <inlineHelpText>calculates the days between the Paid date and the opportunity created date</inlineHelpText>
        <label>Days To Close Deal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Waiting_for_Approval__c</fullName>
        <formula>IF(  ISPICKVAL(StageName, &quot;Pending Won&quot;) , Today()- Date_Submitted_for_Approval__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>formula field - fi stage equals &quot;Pending Won&quot; calculate days waiting for approval from current date less Date Submitted for Approval</inlineHelpText>
        <label>Days Waiting for Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_to_Approve__c</fullName>
        <formula>Approval_Date__c -  Date_Submitted_for_Approval__c</formula>
        <inlineHelpText>formula field that calculates the number of days from submitted for approval until approved</inlineHelpText>
        <label>Days to Approve</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Contact_Email__c</fullName>
        <formula>Deal_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Contact_Id__c</fullName>
        <formula>Deal_Contact__r.Id</formula>
        <inlineHelpText>formula field that reads the deal contact id for data migration project</inlineHelpText>
        <label>Deal Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Contact_Phone__c</fullName>
        <description>testing if the phone shows as a callable link in the Salesforce 1 mobile app</description>
        <label>Deal Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Deal_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>the primary contact associated with the Opportunity</inlineHelpText>
        <label>Deal Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Business_Unit__c</field>
                <operation>equals</operation>
                <valueField>$User.Business_Unit_for_Contact_Filter__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Deal Contact)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Status__c</fullName>
        <formula>CASE( Account.Status__c, 
&quot;Active&quot;,&quot;Active&quot;, 
&quot;New&quot;,&quot;New&quot;, 
&quot;Inactive&quot;,&quot;Inactive&quot;, 
&quot;In Setup&quot;,&quot;In Setup&quot;,
&quot;&quot;, &quot;Prospect&quot;,
&quot;unknown&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Website__c</fullName>
        <formula>HYPERLINK( Account.Website , Account.Website)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_notes__c</fullName>
        <description>notes from dealer</description>
        <inlineHelpText>notes from dealer</inlineHelpText>
        <label>Dealer notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealmaker_Close_Date2__c</fullName>
        <formula>IF( 
DMAPP__Dealmaker_Opportunity__c != null, 
DMAPP__Dealmaker_Opportunity__r.DMAPP__Calculated_Close_Date__c , 
CloseDate 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealmaker Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealmaker_Close_Date__c</fullName>
        <formula>IF(
DMAPP__Dealmaker_Opportunity__c != null,
DMAPP__Dealmaker_Opportunity__r.DMAPP__Calculated_Close_Date__c ,
CloseDate
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealmaker Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deposit_Amount__c</fullName>
        <inlineHelpText>Please enter the deposit Amount</inlineHelpText>
        <label>Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_ROLL__c</fullName>
        <formula>Discount_Subscription__c + Discount_Setup__c + Discount_Fulfillment__c +  Discount_One_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount_Subscription__c + Discount_Setup__c + Discount_Fulfillment__c +  Discount_One_Time__c</inlineHelpText>
        <label>Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount_Approval_Status__c</fullName>
        <inlineHelpText>Updated by approval processes for each area of approval.</inlineHelpText>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Explanation__c</fullName>
        <inlineHelpText>Please input the reason for the discount here.</inlineHelpText>
        <label>Discount Reason Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount_Fulfillment__c</fullName>
        <inlineHelpText>on the product the fulfillment checkbox is true</inlineHelpText>
        <label>Discount Fulfillment</label>
        <summarizedField>OpportunityLineItem.Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Fulfillment__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_One_Time__c</fullName>
        <inlineHelpText>on the product the one time fee checkbox = true - List Price2 &gt; 0, Discount Amount &lt; 0</inlineHelpText>
        <label>Discount One Time</label>
        <summarizedField>OpportunityLineItem.Discount_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.One_Time_Fee__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.List_Price_Formula__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.Discount_Amount__c</field>
            <operation>lessThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Discount_Reason__c</fullName>
        <label>Discount Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Match Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Dealer Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiated Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister Store Wanting Same Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conquest (Dealer Socket, Car Research)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NADA/DD Special</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Recurring_Converted__c</fullName>
        <formula>IF( 
Price_Book_Used__c = &quot;Vin Canada&quot;, 
Discount_Subscription__c * CAD_Conversion_Rate__c, 
Discount_Subscription__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Recurring (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>